--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTING LIBRARIES REQUIRED FOR THIS CODE",
     "import sys\n",
     "import numpy as np\n",
     "from scipy.stats import randint\n",
@@ -64,7 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#loading input and output file\n",
+    "# loading input and output file\n",
+    "# the loaded filecontaints 500 x 5 points at input",
+    "# to list - frequency points and the corresponding autospectra
     "dfin = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['infile']\n",
     "dfout = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['outfile']"
    ]
