--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "# loading input and output file\n",
     "# the loaded filecontaints 500 x 5 points at input",
-    "# to list - frequency points and the corresponding autospectra
+    "# to list - frequency points and the corresponding autospectra",
     "dfin = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['infile']\n",
     "dfout = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['outfile']"
    ]
