--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "# loading input and output file\n",
-    "# the loaded filecontaints 500 x 5 points at input",
-    "# to list - frequency points and the corresponding autospectra",
+    "# the loaded filecontaints 500 x 5 points at input\n",
+    "# to list - frequency points and the corresponding autospectra\n",
     "dfin = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['infile']\n",
     "dfout = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['outfile']"
    ]
