--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IMPORTING LIBRARIES REQUIRED FOR THIS CODE",
+    "# IMPORTING LIBRARIES REQUIRED FOR THIS CODE\n",
     "import sys\n",
     "import numpy as np\n",
     "from scipy.stats import randint\n",
