--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -81,10 +81,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "# split into input and outputs\n",
+    "Shuffling the datasets to vary the splits used for cross-validation\n",
     "ind = np.random.RandomState(22).permutation(range(len(dfin)))\n",
     "\n",
+    "# split into input and outputs\n",
     "dfin = dfin[ind][:][:]\n",
     "dfout = dfout[ind][:][:]\n",
     " "
