--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -68,10 +68,10 @@
     "# loading input and output file\n",
     "# the loaded filecontaints 500 x 5 points at input\n",
     "# to list: Column 1 is turbulence data, for 500 datapoints in this case\n",
-    "# mean wind data is calculated from the whole database to find turbulence for the 500 datapoints\n"
-    "# Column 2 contains frequencies, arranged in a logarithmic space\n"
-    "# Column 3, 4 and 5 contains the numveerically-generated, the von Karman\n"
-    "# and perturbation-series autospectra corresponding to frequencies in Column 2 \n"
+    "# mean wind data is calculated from the whole database to find turbulence for the 500 datapoints\n",
+    "# Column 2 contains frequencies, arranged in a logarithmic space\n",
+    "# Column 3, 4 and 5 contains the numveerically-generated, the von Karman\n",
+    "# and perturbation-series autospectra corresponding to frequencies in Column 2 \n",
     "dfin = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['infile']\n",
     "dfout = sio.loadmat('5paracnn5crawdisjointlogspacefreq.mat')['outfile']"
    ]
