--- a/MultiparaCNN-Kfold.ipynb
+++ b/MultiparaCNN-Kfold.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loss function with error for parameter alpha\n",
+    "# Loss function with an additional error for parameter alpha\n",
     "def pwwloss(y_act, y_pred):\n",
     "    a = [0.3734, 0.1996, 0.1224]\n",
     "    a1 = K.abs(0.3734*y_act[0] + 0.1996*y_act[1] + 0.1224*y_act[2] - 0.3734*y_pred[0] - 0.1996*y_pred[1] - 0.1224*y_pred[2])\n",
